Fix code review suggestions